# accelerate-tests

./: .gitignore  README.md  accelerate-tests.cabal  cabal.project
src/: Main.hs
src/Data/Array/Accelerate/: Tests.hs
src/Data/Array/Accelerate/Tests/: Config.hs  Types.hs  Util.hs
src/Data/Array/Accelerate/Tests/Prog/: ADBenchGMMGrad.hs  NondetScanlseg.hs  NondetStencil.hs  NondetSumhang.hs
src/Data/Array/Accelerate/Tests/Prog/ADBenchGMMGrad/: Acc.hs
